--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "title": "DA LeanForward",
   "name": "leanforward",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "View DeviantArt's SitBack page without Flash installed.",
   "main": "index.js",
   "author": "Christopher Bero <bigbero@gmail.com>",
   "updateURL": "https://raw.githubusercontent.com/ctag/leanforward/master/update.rdf",
-  "updateLink": "https://github.com/ctag/leanforward/releases/download/0.1.1/da_leanforward.xpi",
+  "updateLink": "https://github.com/ctag/leanforward/releases/download/0.1.2/da_leanforward.xpi",
   "engines": {
     "firefox": ">=38.0a1",
     "fennec": ">=38.0a1"
@@ -16,6 +16,9 @@
     "jetpack"
   ],
   "permissions": {
-    "cross-domain-content": ["http://ajax.googleapis.com/"]
+    "cross-domain-content": [
+      "http://ajax.googleapis.com/",
+      "http://backend.deviantart.com/"
+    ]
   }
 }
